fix: Modify overflow

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -96,6 +96,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif,
     Gowun Batang, Gowun Dodum, Noto Sans;
   /* background-color: #fcfaef; */
+  max-width: 100%;
   /* overflow-x: hidden; */
 }
 
